fix for search text input alignment, menu fixes, and some cleanup.

--- a/media/css/index.css
+++ b/media/css/index.css
@@ -71,8 +71,7 @@ section_secondary
   height: 405px;
   margin: 25px auto;
   text-align: left;
-	color: #333;
-	font-weight: bold;
+	color: #FFF;
 	background: url(../images/interface/bg_secondary_section.png) no-repeat;
 }
 
